Bug #707649 - fix apply_sasl in error cases.

Forgot to dereference the pointers before assigning the values, if we
get non-fatal errors returned from stringprep.